turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:8: error: type mismatch;
 found   : Char
 required: String
      dir = rule(i)
                ^